# JPO

./: .gitignore  README.md
lab_01/: zad_01.cpp  zad_01_mod.cpp  zad_01_trad.cpp  zad_02.cpp  zad_03.cpp  zad_04.cpp
lab_02/: zad_01.cpp  zad_02.cpp  zad_02_man.cpp  zad_03.cpp  zad_03_man.cpp  zad_04.cpp
lab_03/circle/: CMakeLists.txt
lab_03/circle/inc/: circle.h  point.h
lab_03/circle/src/: circle.cpp  main.cpp  point.cpp
lab_03/point/: CMakeLists.txt
lab_03/point/inc/: point.h
lab_03/point/src/: main.cpp
lab_03/zad_01-03/: zad_01.cpp  zad_02.cpp  zad_03.cpp
lab_04/: zad_01.cpp
lab_04/geometry/: CMakeLists.txt
lab_04/geometry/inc/: Circle.hpp  Figure.hpp  Point.hpp  Rectangle.hpp  Square.hpp
lab_04/geometry/src/: circle.cpp  figure.cpp  main.cpp  point.cpp  rectangle.cpp  square.cpp
lab_05/zad_01/: CMakeLists.txt
lab_05/zad_01/inc/: Complex_number.hpp
lab_05/zad_01/src/: main.cpp
